# Tiny-Robot-Brain

./: CMakeLists.txt  README.md  brain.cpp  config.yaml  net_functions.py  py_brain.py
